azureps-cmdlets-docs/ResourceManager/AzureRM.RedisCache/v2.6.0/Set-AzureRmRedisCache.md
---
external help file: Microsoft.Azure.Commands.RedisCache.dll-Help.xml
ms.assetid: 6234F211-6ED4-443F-9B83-DEB9AC51B763
online version:
schema: 2.0.0
content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/RedisCache/Commands.RedisCache/help/Set-AzureRmRedisCache.md
original_content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/RedisCache/Commands.RedisCache/help/Set-AzureRmRedisCache.md
gitcommit: https://github.com/Visual-Studio-China/azure-powershell/blob/94e42834e29c78cafba9e3f1e99e14af92561036
---

# Set-AzureRmRedisCache

## SYNOPSIS
Modifies a Redis Cache.

## SYNTAX

```
Set-AzureRmRedisCache -ResourceGroupName <String> -Name <String> [-Size <String>] [-Sku <String>]
 [-MaxMemoryPolicy <String>] [-RedisConfiguration <Hashtable>] [-EnableNonSslPort <Boolean>]
 [-TenantSettings <Hashtable>] [-ShardCount <Int32>] [<CommonParameters>]
```

## DESCRIPTION
The **Set-AzureRmRedisCache** cmdlet modifies an Azure Redis Cache.

## EXAMPLES

### Example 1: Modify a Redis Cache
```
PS C:\>Set-AzureRmRedisCache -ResourceGroupName "MyGroup" -Name "MyCache" -RedisConfiguration @{"maxmemory-policy" = "allkeys-random"}

          PrimaryKey         : pJ+jruGKPHDKsEC8kmoybobH3TZx2njBR3ipEsquZFo=
          SecondaryKey       : sJ+jruGKPHDKsEC8kmoybobH3TZx2njBR3ipEsquZFo=
          ResourceGroupName  : mygroup
          Id                 : /subscriptions/a559b6fd-3a84-40bb-a450-b0db5ed37dfe/resourceGroups/mygroup/providers/Microsoft.Cache/Redis/myCache
          Location           : North Central US
          Name               : MyCache
          Type               : Microsoft.Cache/Redis
          HostName           : mycache.redis.cache.windows.net
          Port               : 6379
          ProvisioningState  : creating
          SslPort            : 6380
          RedisConfiguration : {[maxmemory-policy, allkeys-random]}
          EnableNonSslPort   : False
          RedisVersion       : 2.8
          Size               : 250MB
          Sku                : Standard
```

This command updates the maxmemory-policy for the Redis Cache named MyCache.

## PARAMETERS

### -Name
Specifies the name of the Redis Cache to update.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -ResourceGroupName
Specifies the name of the resource group that contains the Redis Cache.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Size
Specifies the size of the Redis Cache.
Valid values are: 

- P1
- P2
- P3
- P4
- C0
- C1
- C2
- C3
- C4
- C5
- C6
- 250MB
- 1GB
- 2.5GB
- 6GB
- 13GB
- 26GB
- 53GB

The default value is 1GB or C1.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Sku
Specifies the SKU of the Redis Cache to create.
Valid values are: 

- Basic
- Standard
- Premium

The default value is Standard.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -MaxMemoryPolicy
This parameter has been deprecated.
Use the *RedisConfiguration* parameter to set maxmemory-policy.
For example: 

`-RedisConfiguration @{"maxmemory-policy" = "allkeys-lru"}`

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -RedisConfiguration
Specifies Redis configuration settings.
The acceptable values for this parameter are:

- rdb-backup-enabled.
Specifies that Redis data persistence is enabled.
Premium tier only.
- rdb-storage-connection-string.
Specifies the connection string to the Storage account for Redis data persistence.
Premium tier only.
- rdb-backup-frequency.
Specifies the backup frequency for Redis data persistence.
Premium tier only. 
- maxmemory-reserved.
Configures the memory reserved for non-cache processes.
Standard and Premium tiers. 
- maxmemory-policy.
Configures the eviction policy for the cache.
All pricing tiers. 
- notify-keyspace-events.
Configures keyspace notifications.
Standard and premium tiers. 
- hash-max-ziplist-entries.
Configures memory optimization for small aggregate data types.
Standard and Premium tiers. 
- hash-max-ziplist-value.
Configures memory optimization for small aggregate data types.
Standard and Premium tiers. 
- set-max-intset-entries.
Configures memory optimization for small aggregate data types.
Standard and Premium tiers. 
- zset-max-ziplist-entries.
Configures memory optimization for small aggregate data types.
Standard and Premium tiers. 
- zset-max-ziplist-value.
Configures memory optimization for small aggregate data types.
Standard and Premium tiers. 
- databases.
Configures the number of databases.
This property can be configured only at cache creation.
Standard and Premium tiers.

For more information, see Manage Azure Redis Cache with Azure PowerShellhttp://go.microsoft.com/fwlink/?LinkId=800051 (http://go.microsoft.com/fwlink/?LinkId=800051).

```yaml
Type: Hashtable
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -EnableNonSslPort
Indicates whether the non-SSL port is enabled.
The default value is $False (the non-SSL port is disabled).

```yaml
Type: Boolean
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -ShardCount
Specifies the number of shards to create on a Premium cluster cache.

```yaml
Type: Int32
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -TenantSettings
This parameter has been deprecated.

```yaml
Type: Hashtable
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None
You can pipe input to this cmdlet by property name, but not by value.

## OUTPUTS

### Microsoft.Azure.Commands.RedisCache.Models.RedisCacheAttributesWithAccessKeys
Returns all attributes of a Redis Cache, including primary and secondary access keys.

## NOTES

## RELATED LINKS

[Get-AzureRmRedisCache](./Get-AzureRmRedisCache.md)

[New-AzureRmRedisCache](./New-AzureRmRedisCache.md)

[Remove-AzureRmRedisCache](./Remove-AzureRmRedisCache.md)


